--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,6 +8,17 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
+    <form action="/login" method="post">
+      
+      <p><label>Username:</label>
+      <input type="text" name="user_name"></p>
+
+      <p><label>Password:</label>
+      <input type="text" name="password"></p>
+
+      <p><input type="submit" value="Login"></p>
+      
+    </form>
 
   </body>
 </html>
