--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">  
   </head>
   <body id="page-top">
+    <h1>Welcome <%= @current_user.username %></h1>
+    <% binding.pry %>
     
-
   </body>
 </html>
