--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,7 +7,7 @@
   </head>
   <body id="page-top">
     <h1>Welcome <%= @current_user.username %></h1>
-    <% binding.pry %>
+    <h2>Your balance is: <%= @current_user.balance %></h2>
 
   </body>
 </html>
