--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -9,5 +9,7 @@
     <h1>Welcome <%= @current_user.username %></h1>
     <h2>Your balance is: <%= @current_user.balance %></h2>
 
+    <a href="/logout">Log Out</a>
+
   </body>
 </html>
