automatically backed up by learn

--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
   </head>
   <body id="page-top">
-    <h1>Welcome <%= @current_user.username %></h1>
-    <h2>Your balance is: <%= @current_user.balance %></h2>
+    <h1>Welcome <%= @cuser.username %></h1>
+    <h2>Your balance is: <%= @user.balance %></h2>
 
     <a href="/logout">Log Out</a>
 
