--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -6,15 +6,15 @@
     <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
   </head>
   <body id="page-top">
-    <%
-    if Helpers.is_logged_in?(session)
-      @current_user = Helpers.current_user(session)
-    end %>
-
-      <h1>Welcome <%= Helpers.current_user(session).username %></h1>
-      <h2>Your balance is: <%= @user.balance %></h2>
-
-    <a href="/logout">Log Out</a>
+    <% if Helpers.is_logged_in?(session) %>
+      <% @current_user = Helpers.current_user(session) %>
+        <h1>Welcome <%= @current_user.username %></h1>
+        <h2>Your balance is: <%= @current_user.balance %></h2>
+        <a href="/logout">Log Out</a>
+    <% else %>
+    <% erb :error %>
+    <% end %>
+    
 
   </body>
 </html>
