automatically backed up by learn

--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -12,7 +12,7 @@
         <h2>Your balance is: <%= @current_user.balance %></h2>
         <a href="/logout">Log Out</a>
     <% else %>
-    <% erb :error %>
+        <a href="/">Home</a>
     <% end %>
 
 
