--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -8,7 +8,7 @@
   <body id="page-top">
     <% if Helpers.is_logged_in?(session) %>
       <% @current_user = Helpers.current_user(session) %>
-        <h1><%= @current_user.username %></h1>
+        <h1>Welcome <%= @current_user.username %></h1>
         <h2><%= @current_user.balance %></h2>
         <a href="/logout">Log Out</a>
     <% else %>
